Edited the UMLClassTest
Changed the UMLClassTest to work with our current code to help debug some issues.