@@ -6,10 +6,12 @@ import codecain.UMLClass;
 import codecain.UMLClassInfo;
 import codecain.UMLMethodInfo;
 import codecain.UMLFieldInfo;
+import codecain.UMLParameterInfo;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
+import java.util.List;
+import java.util.stream.Collectors;
 
 public class UMLClassTest {
 
@@ -73,7 +75,6 @@ public class UMLClassTest {
         assertNotNull(renamedField, "Field should be renamed to newField with type int");
     }
 
-
     @Test
     public void testRenameNonExistentField() {
         UMLClass.addClass("TestClass1");
@@ -85,7 +86,7 @@ public class UMLClassTest {
     @Test
     public void testAddMethod() {
         UMLClass.addClass("TestClass1");
-        methodsManager.addMethod("TestClass1", "method1", Arrays.asList("int param1"));
+        methodsManager.addMethod("TestClass1", "method1", List.of(new UMLParameterInfo("int", "param1")));
         UMLClassInfo classInfo = UMLClass.classMap.get("TestClass1");
         UMLMethodInfo method = classInfo.getMethodByName("method1");
         assertNotNull(method, "Method should be added to the class");
@@ -94,8 +95,8 @@ public class UMLClassTest {
     @Test
     public void testAddDuplicateMethod() {
         UMLClass.addClass("TestClass1");
-        methodsManager.addMethod("TestClass1", "method1", Arrays.asList("int param1"));
-        methodsManager.addMethod("TestClass1", "method1", Arrays.asList("int param1"));
+        methodsManager.addMethod("TestClass1", "method1", List.of(new UMLParameterInfo("int", "param1")));
+        methodsManager.addMethod("TestClass1", "method1", List.of(new UMLParameterInfo("int", "param1")));
         UMLClassInfo classInfo = UMLClass.classMap.get("TestClass1");
         assertEquals(1, classInfo.getMethods().size(), "Duplicate method should not be added");
     }
@@ -103,7 +104,7 @@ public class UMLClassTest {
     @Test
     public void testRemoveMethod() {
         UMLClass.addClass("TestClass1");
-        methodsManager.addMethod("TestClass1", "method1", Arrays.asList("int param1"));
+        methodsManager.addMethod("TestClass1", "method1", List.of(new UMLParameterInfo("int", "param1")));
         methodsManager.removeMethod("TestClass1", "method1");
         UMLClassInfo classInfo = UMLClass.classMap.get("TestClass1");
         UMLMethodInfo method = classInfo.getMethodByName("method1");
@@ -113,7 +114,7 @@ public class UMLClassTest {
     @Test
     public void testRenameMethod() {
         UMLClass.addClass("TestClass1");
-        methodsManager.addMethod("TestClass1", "oldMethod", Arrays.asList("int param1"));
+        methodsManager.addMethod("TestClass1", "oldMethod", List.of(new UMLParameterInfo("int", "param1")));
         methodsManager.renameMethod("TestClass1", "oldMethod", "newMethod");
         UMLClassInfo classInfo = UMLClass.classMap.get("TestClass1");
         UMLMethodInfo method = classInfo.getMethodByName("newMethod");
@@ -124,35 +125,35 @@ public class UMLClassTest {
     @Test
     public void testAddParameter() {
         UMLClass.addClass("TestClass1");
-        methodsManager.addMethod("TestClass1", "method1", Arrays.asList("int param1"));
-        methodsManager.addParameter("TestClass1", "method1", "String param2");
+        methodsManager.addMethod("TestClass1", "method1", List.of(new UMLParameterInfo("int", "param1")));
+        methodsManager.addParameter("TestClass1", "method1", new UMLParameterInfo("String", "param2"));
         UMLClassInfo classInfo = UMLClass.classMap.get("TestClass1");
         UMLMethodInfo method = classInfo.getMethodByName("method1");
-        assertTrue(method.getParameters().contains("String param2"), "Parameter should be added to method");
+        assertTrue(method.getParameters().stream().map(UMLParameterInfo::toString).collect(Collectors.toList()).contains("String : param2"), "Parameter should be added to method");
     }
 
     @Test
     public void testRemoveParameter() {
         UMLClass.addClass("TestClass1");
-        methodsManager.addMethod("TestClass1", "method1", Arrays.asList("int param1", "String param2"));
-        methodsManager.removeParameter("TestClass1", "method1", "String param2");
+        methodsManager.addMethod("TestClass1", "method1", List.of(new UMLParameterInfo("int", "param1"), new UMLParameterInfo("String", "param2")));
+        methodsManager.removeParameter("TestClass1", "method1", new UMLParameterInfo("String", "param2"));
         UMLClassInfo classInfo = UMLClass.classMap.get("TestClass1");
         UMLMethodInfo method = classInfo.getMethodByName("method1");
-        assertFalse(method.getParameters().contains("String param2"), "Parameter should be removed from method");
-        assertTrue(method.getParameters().contains("int param1"), "Parameter should not be removed from method");
-
+        assertFalse(method.getParameters().stream().map(UMLParameterInfo::toString).collect(Collectors.toList()).contains("String : param2"), "Parameter should be removed from method");
+        assertTrue(method.getParameters().stream().map(UMLParameterInfo::toString).collect(Collectors.toList()).contains("int : param1"), "Parameter should not be removed from method");
     }
 
     @Test
-    public void testChangeParameters() {
+    public void testChangeParameter() {
         UMLClass.addClass("TestClass1");
-        methodsManager.addMethod("TestClass1", "method1", Arrays.asList("int param1"));
-        methodsManager.changeParameters("TestClass1", "method1", Arrays.asList("String param1", "boolean param2"));
+        methodsManager.addMethod("TestClass1", "method1", List.of(new UMLParameterInfo("int", "param1")));
+        UMLParameterInfo oldParam = new UMLParameterInfo("int", "param1");
+        UMLParameterInfo newParam = new UMLParameterInfo("String", "param1");
+        methodsManager.changeParameter("TestClass1", "method1", oldParam, newParam);
         UMLClassInfo classInfo = UMLClass.classMap.get("TestClass1");
         UMLMethodInfo method = classInfo.getMethodByName("method1");
-        assertEquals(2, method.getParameters().size(), "Parameters should be updated");
-        assertTrue(method.getParameters().contains("String param1"), "New parameters should be set");
-        assertTrue(method.getParameters().contains("boolean param2"), "New parameters should be set");
+        assertEquals(1, method.getParameters().size(), "Parameters should be updated");
+        assertTrue(method.getParameters().stream().map(UMLParameterInfo::toString).collect(Collectors.toList()).contains("String : param1"), "Parameter should be changed to new type");
     }
 
     @Test
@@ -186,14 +187,21 @@ public class UMLClassTest {
     @Test
     public void testAddMethodWithMultipleParameters() {
         UMLClass.addClass("TestClass1");
-        methodsManager.addMethod("TestClass1", "method1", Arrays.asList("int param1", "String param2", "boolean param3"));
+        methodsManager.addMethod("TestClass1", "method1", List.of(
+                new UMLParameterInfo("int", "param1"),
+                new UMLParameterInfo("String", "param2"),
+                new UMLParameterInfo("boolean", "param3")
+        ));
 
         UMLClassInfo classInfo = UMLClass.classMap.get("TestClass1");
         UMLMethodInfo method = classInfo.getMethodByName("method1");
 
         assertNotNull(method, "Method should be added to the class");
         assertEquals(3, method.getParameters().size(), "Method should have 3 parameters");
-        assertTrue(method.getParameters().containsAll(Arrays.asList("int param1", "String param2", "boolean param3")),
-                "Method should contain all the specified parameters");
+        assertTrue(method.getParameters().stream().map(UMLParameterInfo::toString).collect(Collectors.toList()).containsAll(List.of(
+                "int : param1",
+                "String : param2",
+                "boolean : param3"
+        )), "Method should contain all the specified parameters");
     }
 }
